--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.8.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
