--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
     "dayjs": "^1.11.10",
+    "embla-carousel-react": "^8.0.0-rc19",
     "lucide-react": "^0.302.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
