--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^22.13.4",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.8",
@@ -56,7 +57,7 @@
     "eslint": "^9.20.1",
     "eslint-config-next": "^15.1.7",
     "postcss": "^8.5.2",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "4.0.0",
     "typescript": "^5.7.3",
     "yarn-upgrade-all": "^0.7.4"
   }
